--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "todo-har-exporter"
 version = "0.1.0"
+description = "Export tasklist from captured Microsoft to-do traffic."
+license = "GPL-3.0-or-later"
+authors = ["aplqo <aplqo@outlook.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
